--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@
   min-height: 100vh;
   background-color: #141961;
   display: flex;
-
   justify-content: center;
   align-items: flex-start;
-  padding: 1rem;
+  /* padding: 1rem; */
+  position: relative;
 }
 
 .content-container {
@@ -30,6 +30,7 @@
   justify-content: flex-start;
   align-items: center;
   gap: 1.5rem;
+  position: relative;
 }
 
 /* Header styles */
@@ -171,6 +172,57 @@
 
   .head-text {
     font-size: 1.4rem;
+  }
+}
+/* Over delete-container */
+.overdelete-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(50, 50, 50, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overdelete-content {
+  width: 20%;
+  height: auto;
+  background-color: white;
+  padding: 1.5rem 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 0.85rem;
+  & .deleteHeader {
+    width: 100%;
+    font-size: 1.25rem;
+    line-height: 2rem;
+    font-weight: 400;
+    text-align: center;
+    color: rgb(87, 87, 87);
+  }
+  .okbtn,
+  .cancelbtn {
+    width: 90%;
+    height: auto;
+    padding: 0.85rem 0;
+    font-size: 1.2rem;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    border-radius: 0.85rem;
+    cursor: pointer;
+  }
+  .okbtn {
+    background-color: #ff6d5d;
+    color: white;
+  }
+  .cancelbtn {
+    background-color: white;
+    border: 2px solid #ff6d5d;
   }
 }
 
